feat(school): The add_exam_to_course has been implemented The respective unit test has been added

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -390,12 +390,17 @@
     "            print(f\"School '{school_name}' cannot be opened while there are no students enrolled.\")\n",
     "    \n",
     "    def add_exam_to_course(self, course_name, exam_name):\n",
-    "        if exam_name in self.exams:\n",
-    "            print(f\"The exam '{exam_name}' already exists and is associated with course '{self.exams[exam_name]}'.\")\n",
-    "        elif course_name in self.courses:\n",
-    "            self.exams[exam_name] = course_name\n",
-    "            print(f\"The exam '{exam_name}' has been added to course '{course_name}'.\")\n",
-    "        else:\n",
+    "        course_exist = False\n",
+    "        for course in self.courses:\n",
+    "            if course.name == course_name:\n",
+    "                course_exist = True\n",
+    "                if exam_name in course.exams:\n",
+    "                    print(f\"The exam '{exam_name}' already exists and is associated with course '{course.name}'.\")\n",
+    "                else:   \n",
+    "                    course.exams.append(exam_name)\n",
+    "                    print(f\"The exam '{exam_name}' has been added to course '{course_name}'.\")\n",
+    "                break\n",
+    "        if not course_exist:\n",
     "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
     "    def grade_exam(self, school_name, course_name, client_name, exam_name):\n",
@@ -437,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -461,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -591,6 +596,7 @@
     "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
     "                    if school:\n",
     "                        school.remove_student(client_name)\n",
+    "                        \n",
     "            elif parts[1] == 'open' or parts[1] == 'close':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"school open/close <school_name>\"):\n",
     "                    _, cmd, school_name = parts\n",
@@ -600,6 +606,13 @@
     "                            school.open(school_name)\n",
     "                        elif cmd == 'close':\n",
     "                            school.close(school_name)\n",
+    "            \n",
+    "            elif parts[1] == 'add_exam_to_course':\n",
+    "                if self.validate_command(parts, 5, \"invalid_format\", \"school add_exam_to_course <school_name> <course_name> <exam_name>\"):\n",
+    "                    _, _, school_name, course_name, exam_name = parts\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
+    "                    if school:\n",
+    "                        school.add_exam_to_course(course_name, exam_name)\n",
     "        \n",
     "            elif   parts[1] == 'remove_school':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"school remove_school <school_name>\"):\n",
@@ -676,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -711,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -756,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -775,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -784,7 +797,12 @@
      "output_type": "stream",
      "text": [
       "Starting city simulation... Type 'q' to exit\n",
-      "Current School(s):\n"
+      "School EOI added to the system.\n",
+      "--- Agents loaded successfully from agents.json. --- \n",
+      "Error: Invalid command format. Use 'school add_exam_to_course <school_name> <course_name> <exam_name>'.\n",
+      "The exam 'Chapter01' already exists and is associated with course 'Python'.\n",
+      "The exam 'Chapter02' has been added to course 'Python'.\n",
+      "--- Agents saved successfully to agents.json. --- \n"
      ]
     }
    ],
