fix(Client): The joint_enrollment_queue command has been fixed

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -237,29 +237,26 @@
     "        school = self.agent_manager.get_agent_by_name(school_name, School)\n",
     "        if school:\n",
     "            if self.name in school.students:\n",
-    "                course_exists = False\n",
     "                for course in school.courses:\n",
     "                    if course.name == course_name:\n",
-    "                        course_exists = True\n",
-    "                        break\n",
+    "                        already_in_queue = False\n",
+    "                        for student in course.enrollment_queue.queue:\n",
+    "                            if student == self.name:\n",
+    "                                already_in_queue = True\n",
+    "                                break\n",
     "\n",
-    "                if course_exists:\n",
-    "                    already_in_queue = False\n",
-    "                    for item in school.courses_client_queue.queue:\n",
-    "                        if item == [course_name, self.name]:\n",
-    "                            already_in_queue = True\n",
-    "                            break\n",
-    "                    if not already_in_queue:\n",
-    "                        school.courses_client_queue.enqueue([course_name, self.name])\n",
-    "                        print(f'{self.name} joined the enrollment queue for {course_name} in {school_name}.')\n",
-    "                    else:\n",
-    "                        print(f'{self.name} is already in the enrollment queue for {course_name} in {school_name}.')\n",
+    "                        if not already_in_queue:\n",
+    "                            course.enrollment_queue.enqueue(self.name)\n",
+    "                            print(f\"{self.name} joined the enrollment queue for {course_name} in {school_name}.\")\n",
+    "                        else:\n",
+    "                            print(f\"{self.name} is already in the enrollment queue for {course_name} in {school_name}.\")\n",
+    "                        break  \n",
     "                else:\n",
-    "                    print(f'{course_name} is not available in {school_name}.')\n",
+    "                    print(f\"{course_name} is not available in {school_name}.\")\n",
     "            else:\n",
-    "                print(f'{self.name} is not enrolled in {school_name}.')\n",
+    "                print(f\"Client '{self.name}' not enrolled in school '{school.name}\")\n",
     "        else:\n",
-    "            print(f\"School '{school_name}' do not exist.\")\n",
+    "                print(f\"School '{school_name}' do not exist.\")\n",
     "    \n",
     "    def assist_course(self, course_name):\n",
     "        pass\n",
@@ -290,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -300,7 +297,6 @@
     "        super().__init__(name)\n",
     "        self.students = []  \n",
     "        self.courses = [] \n",
-    "        self.courses_client_queue = Queue()\n",
     "        self.is_open = True \n",
     "        self.agent_manager = AgentManager() \n",
     "\n",
@@ -442,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -451,7 +447,8 @@
     "    def __init__(self, name):\n",
     "        self.name = name\n",
     "        self.students = []  \n",
-    "        self.exams = [] "
+    "        self.exams = [] \n",
+    "        self.enrollment_queue = Queue()"
    ]
   },
   {
@@ -466,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -689,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -724,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -769,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -788,24 +785,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "788ad798",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting city simulation... Type 'q' to exit\n",
-      "School EOI added to the system.\n",
-      "--- Agents loaded successfully from agents.json. --- \n",
-      "Error: Invalid command format. Use 'school add_exam_to_course <school_name> <course_name> <exam_name>'.\n",
-      "The exam 'Chapter01' already exists and is associated with course 'Python'.\n",
-      "The exam 'Chapter02' has been added to course 'Python'.\n",
-      "--- Agents saved successfully to agents.json. --- \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "if __name__ == \"__main__\":\n",
