feat(School): The admin_student_from_queue has been implemented

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -234,28 +234,31 @@
     "                print(f'{self.name} is not currently enrolled in any school.')\n",
     "    \n",
     "    def join_enrollment_queue(self, school_name, course_name):\n",
-    "        school = self.agent_manager.get_agent_by_name(school_name, School)\n",
-    "        if school:\n",
-    "            if self.name in school.students:\n",
-    "                for course in school.courses:\n",
-    "                    if course.name == course_name:\n",
-    "                        already_in_queue = False\n",
-    "                        for student in course.enrollment_queue.queue:\n",
-    "                            if student == self.name:\n",
-    "                                already_in_queue = True\n",
+    "            school = self.agent_manager.get_agent_by_name(school_name, School)\n",
+    "            if school:\n",
+    "                if self.name in school.students:\n",
+    "                    for course in school.courses:\n",
+    "                        if course.name == course_name:\n",
+    "                            if self.name in course.students:\n",
+    "                                print(f\"{self.name} is already enrolled in {course_name} at {school_name}.\")\n",
     "                                break\n",
+    "                            already_in_queue = False\n",
+    "                            for student in course.enrollment_queue.queue:\n",
+    "                                if student == self.name:\n",
+    "                                    already_in_queue = True\n",
+    "                                    break\n",
     "\n",
-    "                        if not already_in_queue:\n",
-    "                            course.enrollment_queue.enqueue(self.name)\n",
-    "                            print(f\"{self.name} joined the enrollment queue for {course_name} in {school_name}.\")\n",
-    "                        else:\n",
-    "                            print(f\"{self.name} is already in the enrollment queue for {course_name} in {school_name}.\")\n",
-    "                        break  \n",
+    "                            if not already_in_queue:\n",
+    "                                course.enrollment_queue.enqueue(self.name)\n",
+    "                                print(f\"{self.name} joined the enrollment queue for {course_name} in {school_name}.\")\n",
+    "                            else:\n",
+    "                                print(f\"{self.name} is already in the enrollment queue for {course_name} in {school_name}.\")\n",
+    "                            break\n",
+    "                    else:\n",
+    "                        print(f\"{course_name} is not available in {school_name}.\")\n",
     "                else:\n",
-    "                    print(f\"{course_name} is not available in {school_name}.\")\n",
+    "                    print(f\"Client '{self.name}' not enrolled in school '{school.name}\")\n",
     "            else:\n",
-    "                print(f\"Client '{self.name}' not enrolled in school '{school.name}\")\n",
-    "        else:\n",
     "                print(f\"School '{school_name}' do not exist.\")\n",
     "    \n",
     "    def assist_course(self, course_name):\n",
@@ -305,7 +308,7 @@
     "        \"school create_course <course_name> <school_name>\": \"Create a new course at school.\",\n",
     "        \"school show_students <school_name>\": \"Show the list of all students registered at school.\",\n",
     "        \"school show_enrollment_queue <school_name>\": \"Show the enrollment queue for the course.\",\n",
-    "        # \"school admit_student_from_queue <school_name><course_name>\": \"Admit the next student from the queue to enroll in to a course.\",\n",
+    "        \"school admit_student_from_queue <school_name> <course_name>\": \"Admit the next student from the queue to enroll in to a course.\",\n",
     "        \"school show_courses <school_name>\": \"Show the available courses at school.\",\n",
     "        \"school remove_student <school_name> <client_name>\": \"Remove a student from school.\",\n",
     "        \"school show_list\": \"Show the list of schools in the system\",\n",
@@ -349,8 +352,22 @@
     "            for course, student in self.courses_client_queue:\n",
     "                print(f\"- {student} (Course: {course})\") \n",
     "    \n",
-    "    def admit_student_from_queue(self, school_name, course_name):\n",
-    "        pass\n",
+    "    def admit_student_from_queue(self, course_name):\n",
+    "        for course in self.courses:\n",
+    "            if course.name == course_name:\n",
+    "                if not course.enrollment_queue.is_empty():\n",
+    "                    student_name = course.enrollment_queue.dequeue()\n",
+    "                    student = self.agent_manager.get_agent_by_name(student_name, Client)\n",
+    "                    if student:\n",
+    "                        course.students.append(student_name)\n",
+    "                        print(f\"The student '{student_name}' has been admitted to the course '{course.name}'.\")\n",
+    "                    else:\n",
+    "                        print(f\"Client '{student_name}' not found.\")\n",
+    "                else:\n",
+    "                    print(f\"The enrollment queue for course '{course.name}' is empty.\")\n",
+    "                break    \n",
+    "        else:\n",
+    "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
     "    def show_courses(self):\n",
     "        if len(self.courses) == 0:\n",
@@ -386,17 +403,15 @@
     "            print(f\"School '{school_name}' cannot be opened while there are no students enrolled.\")\n",
     "    \n",
     "    def add_exam_to_course(self, course_name, exam_name):\n",
-    "        course_exist = False\n",
     "        for course in self.courses:\n",
     "            if course.name == course_name:\n",
-    "                course_exist = True\n",
     "                if exam_name in course.exams:\n",
     "                    print(f\"The exam '{exam_name}' already exists and is associated with course '{course.name}'.\")\n",
     "                else:   \n",
     "                    course.exams.append(exam_name)\n",
     "                    print(f\"The exam '{exam_name}' has been added to course '{course_name}'.\")\n",
     "                break\n",
-    "        if not course_exist:\n",
+    "        else:\n",
     "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
     "    def grade_exam(self, school_name, course_name, client_name, exam_name):\n",
@@ -586,6 +601,13 @@
     "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
     "                    if school:\n",
     "                        school.show_enrollment_queue()\n",
+    "            \n",
+    "            elif parts[1] == 'admit_student_from_queue':\n",
+    "                if self.validate_command(parts, 4, \"invalid_format\", \"school admit_student_from_queue <school_name> <course_name>\"):\n",
+    "                    _, _, school_name, course_name = parts\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
+    "                    if school:\n",
+    "                        school.admit_student_from_queue(course_name)\n",
     "            \n",
     "            elif parts[1] == 'remove_student':\n",
     "                if self.validate_command(parts, 4, \"invalid_format\", \"school remove_student <school_name> <client_name>\"):\n",
