--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -105,72 +105,78 @@
     "                print(agent.describe())     \n",
     "    \n",
     "    def load_agents_from_file(self, file_path):\n",
-    "        \"\"\"Carga agentes desde un fichero JSON.\"\"\"\n",
+    "            \"\"\"Carga agentes desde un fichero JSON (con Exams como array de objetos).\"\"\"\n",
     "\n",
-    "        import json\n",
-    "        try:\n",
-    "            with open(file_path, 'r') as file:\n",
-    "                data = json.load(file)\n",
+    "            import json\n",
+    "            try:\n",
+    "                with open(file_path, 'r') as file:\n",
+    "                    data = json.load(file)\n",
     "\n",
-    "            for school_name, school_data in data.get(\"schools\", {}).items():\n",
-    "                self.add_agent(School, school_name)\n",
-    "                school = self.get_agent_by_name(school_name, School)\n",
-    "                school.students = school_data.get(\"students\", [])\n",
-    "                for course_name, course_info in school_data.get(\"courses\", {}).items():\n",
-    "                    course = Course(name=course_name)\n",
-    "                    course.students = course_info.get(\"students\", [])\n",
-    "                    course.exams = course_info.get(\"exams\", [])\n",
-    "                    school.courses.append(course)             \n",
-    "            for client_name, client_data in data.get(\"clients\", {}).items():\n",
-    "                self.add_agent(Client, client_name)\n",
-    "                client = self.get_agent_by_name(client_name, Client)\n",
-    "                enrolled_school = client_data.get(\"enrolled_school\")\n",
-    "                if enrolled_school:\n",
-    "                    client.school_stack.push(enrolled_school)  \n",
-    "                        \n",
-    "            print(f\"--- Agents loaded successfully from {file_path}. --- \")\n",
-    "        except FileNotFoundError:\n",
-    "            print(f\"Error: File '{file_path}' not found.\")\n",
-    "        except json.JSONDecodeError:\n",
-    "            print(f\"Error: File '{file_path}' is not a valid JSON file.\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"An error occurred while loading agents: {e}\")     \n",
+    "                # Load schools\n",
+    "                for school_name, school_data in data.get(\"schools\", {}).items():\n",
+    "                    self.add_agent(School, school_name)\n",
+    "                    school = self.get_agent_by_name(school_name, School)\n",
+    "                    school.students = school_data.get(\"students\", [])\n",
+    "                    for course_name, course_info in school_data.get(\"courses\", {}).items():\n",
+    "                        course = Course(name=course_name)\n",
+    "                        course.students = course_info.get(\"students\", [])\n",
+    "                        # Load exams as objects\n",
+    "                        exams_data = course_info.get(\"exams\", [])\n",
+    "                        course.exams = [Exam(exam_data[\"name\"]) for exam_data in exams_data if \"name\" in exam_data]\n",
+    "                        school.courses.append(course)\n",
+    "\n",
+    "                # Load clients\n",
+    "                for client_name, client_data in data.get(\"clients\", {}).items():\n",
+    "                    self.add_agent(Client, client_name)\n",
+    "                    client = self.get_agent_by_name(client_name, Client)\n",
+    "                    enrolled_school = client_data.get(\"enrolled_school\")\n",
+    "                    if enrolled_school:\n",
+    "                        client.school_stack.push(enrolled_school)\n",
+    "\n",
+    "                print(f\"--- Agents loaded successfully from {file_path}. --- \")\n",
+    "            except FileNotFoundError:\n",
+    "                print(f\"Error: File '{file_path}' not found.\")\n",
+    "            except json.JSONDecodeError:\n",
+    "                print(f\"Error: File '{file_path}' is not a valid JSON file.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"An error occurred while loading agents: {e}\")\n",
     "    \n",
     "    \n",
     "    def save_agents_to_file(self, file_path):\n",
-    "        \"\"\"Guarda los agentes en un fichero JSON.\"\"\"\n",
-    "        import json\n",
-    "        data = {\n",
-    "            \"schools\": {},\n",
-    "            \"clients\": {}\n",
-    "        }\n",
+    "            \"\"\"Guarda los agentes en un fichero JSON (con Exams como array de objetos).\"\"\"\n",
+    "            import json\n",
+    "            data = {\n",
+    "                \"schools\": {},\n",
+    "                \"clients\": {}\n",
+    "            }\n",
     "\n",
-    "        # Guardar schools\n",
-    "        for school in self.filter_agents(School).values():\n",
-    "            courses_data = {}\n",
-    "            for course in school.courses:\n",
-    "                courses_data[course.name] = {\n",
-    "                    \"name\": course.name,\n",
-    "                    \"students\": course.students,\n",
-    "                    \"exams\": course.exams\n",
+    "            # Guardar schools\n",
+    "            for school in self.filter_agents(School).values():\n",
+    "                courses_data = {}\n",
+    "                for course in school.courses:\n",
+    "                    exams_data = [{\"name\": exam.name} for exam in course.exams]\n",
+    "                    courses_data[course.name] = {\n",
+    "                        \"name\": course.name,\n",
+    "                        \"students\": course.students,\n",
+    "                        \"exams\": exams_data\n",
+    "                    }\n",
+    "                data[\"schools\"][school.name] = {\n",
+    "                    \"students\": school.students,\n",
+    "                    \"courses\": courses_data\n",
     "                }\n",
-    "            data[\"schools\"][school.name] = {\n",
-    "                \"students\": school.students,\n",
-    "                \"courses\": courses_data\n",
-    "            }\n",
     "\n",
-    "        # Guardar clients\n",
-    "        for client in self.filter_agents(Client).values():\n",
-    "            data[\"clients\"][client.name] = {\n",
-    "                \"enrolled_school\": client.school_stack.peek()\n",
-    "            }\n",
+    "            # Guardar clients\n",
+    "            for client in self.filter_agents(Client).values():\n",
+    "                data[\"clients\"][client.name] = {\n",
+    "                    \"enrolled_school\": client.school_stack.peek()\n",
+    "                }\n",
     "\n",
-    "        try:\n",
-    "            with open(file_path, 'w') as file:\n",
-    "                json.dump(data, file, indent=4)\n",
-    "            print(f\"--- Agents saved successfully to {file_path}. --- \")\n",
-    "        except Exception as e:\n",
-    "            print(f\"An error occurred while saving agents: {e}\")"
+    "            try:\n",
+    "                with open(file_path, 'w') as file:\n",
+    "                    json.dump(data, file, indent=4)\n",
+    "                print(f\"--- Agents saved successfully to {file_path}. --- \")\n",
+    "            except Exception as e:\n",
+    "                print(f\"An error occurred while saving agents: {e}\")"
    ]
   },
   {
@@ -185,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -290,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -403,16 +409,21 @@
     "            print(f\"School '{school_name}' cannot be opened while there are no students enrolled.\")\n",
     "    \n",
     "    def add_exam_to_course(self, course_name, exam_name):\n",
-    "        for course in self.courses:\n",
-    "            if course.name == course_name:\n",
-    "                if exam_name in course.exams:\n",
-    "                    print(f\"The exam '{exam_name}' already exists and is associated with course '{course.name}'.\")\n",
-    "                else:   \n",
-    "                    course.exams.append(exam_name)\n",
-    "                    print(f\"The exam '{exam_name}' has been added to course '{course_name}'.\")\n",
-    "                break\n",
-    "        else:\n",
-    "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
+    "            for course in self.courses:\n",
+    "                if course.name == course_name:\n",
+    "                    exam_exist = False\n",
+    "                    for exam in course.exams:\n",
+    "                        if exam.name == exam_name: \n",
+    "                            print(f\"The exam '{exam_name}' already exists and is associated with course '{course.name}'.\")\n",
+    "                            exam_exist = True\n",
+    "                            break\n",
+    "                    if not exam_exist:\n",
+    "                        new_exam = Exam(exam_name)\n",
+    "                        course.exams.append(new_exam)\n",
+    "                        print(f\"The exam '{new_exam.name}' has been added to course '{course_name}'.\")\n",
+    "                    break  \n",
+    "            else:\n",
+    "                print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
     "    def grade_exam(self, school_name, course_name, client_name, exam_name):\n",
     "        pass\n",
@@ -453,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -468,6 +479,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9022775f",
+   "metadata": {},
+   "source": [
+    "## Exam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "dc9bd098",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Exam():\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6b99d400",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
@@ -478,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -708,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -743,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -788,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -807,10 +838,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "788ad798",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting city simulation... Type 'q' to exit\n",
+      "School EOI added to the system.\n",
+      "Client Billy added to the system.\n",
+      "--- Agents loaded successfully from agents.json. --- \n",
+      "Error: Invalid command.\n",
+      "Available commands for school:\n",
+      "-school add_school <school_name>: Add a new school to the system.\n",
+      "-school create_course <course_name> <school_name>: Create a new course at school.\n",
+      "-school show_students <school_name>: Show the list of all students registered at school.\n",
+      "-school show_enrollment_queue <school_name>: Show the enrollment queue for the course.\n",
+      "-school admit_student_from_queue <school_name> <course_name>: Admit the next student from the queue to enroll in to a course.\n",
+      "-school show_courses <school_name>: Show the available courses at school.\n",
+      "-school remove_student <school_name> <client_name>: Remove a student from school.\n",
+      "-school show_list: Show the list of schools in the system\n",
+      "-school close / open <schol_name>: Open / close school, if there isn't students at class\n",
+      "-school add_exam_to_course <school_name> <course_name> <exam_name>: Add an exam to a specific course at school.\n",
+      "-school remove_school <school_name>: Removes the school from the agents.\n",
+      "-quit: q: Exit the simulation.\n",
+      "The exam 'Chapter03' has been added to course 'Python'.\n",
+      "--- Agents saved successfully to agents.json. --- \n",
+      "The exam 'Chapter01' has been added to course 'Python'.\n",
+      "The exam 'Chapter02' has been added to course 'Python'.\n",
+      "--- Agents saved successfully to agents.json. --- \n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "if __name__ == \"__main__\":\n",
