fix(school): remove_student command has been fixed

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 89,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 90,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 91,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
     "        \"client join_enrollment_queue <client_name> <school_name> <course_name>\": \"Join a client in a queue to enroll a course.\",\n",
     "        # \"client assist_course <school_name> <couser_name>\": \"Assist a course in a school.\",\n",
     "        \"client show_list\": \"Show the list of clients in the system.\",\n",
-    "        # \"client take_exam <client_name> <course_name> <exam_name>\": \"Allow a student to take an exam of a enrolled course.\",\n",
+    "        \"client take_exam <client_name> <course_name> <exam_name>\": \"Allow a student to take an exam of a enrolled course.\",\n",
     "        \"client remove_client <client_name>\": \"Removes the client from the agents.\",\n",
     "        \"quit\": \"q: Exit the simulation.\"\n",
     "    }\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -384,11 +384,17 @@
     "                print(f\"- {course.name}\")\n",
     "    \n",
     "    def remove_student(self, client_name):\n",
-    "        if client_name in self.students:\n",
-    "            self.students.remove(client_name)\n",
-    "            print(f\"Student '{client_name}' has been removed from school '{self.name}'.\")\n",
-    "        else:\n",
-    "            print(f\"Student '{client_name}' not found in school '{self.name}'.\")            \n",
+    "        try:\n",
+    "            student = self.agent_manager.get_agent_by_name(client_name, Client)\n",
+    "            \n",
+    "            if client_name in self.students:\n",
+    "                self.students.remove(client_name)\n",
+    "                student.school_stack.pop()\n",
+    "                print(f\"Student '{client_name}' has been removed from school '{self.name}'.\")\n",
+    "            else:\n",
+    "                print(f\"Student '{client_name}' not found in school '{self.name}'.\")     \n",
+    "        except:\n",
+    "            print(f\"Student '{student_name}' do not exist.\")       \n",
     "    \n",
     "    def close(self, school_name):\n",
     "        if not self.is_open:\n",
@@ -464,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 93,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -487,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 94,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
@@ -509,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 95,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -711,6 +717,13 @@
     "            elif   parts[1] == 'show_list':\n",
     "                if self.validate_command(parts, 2, \"invalid_format\", \"client show_list\"):\n",
     "                    self.agent_manager.list_agents(Client)\n",
+    "            \n",
+    "            elif   parts[1] == 'take_exam':\n",
+    "                if self.validate_command(parts, 5, \"invalid_format\", \"client take_exam <client_name> <course_name> <exam_name>\"):\n",
+    "                    _, _, client_name, course_name, exam_name = parts\n",
+    "                    client = self.get_agent_or_error(client_name, Client, \"client_not_found\")\n",
+    "                    if client:\n",
+    "                        client.take_exam(course_name, exam_name)\n",
     "                    \n",
     "            elif   parts[1] == 'remove_client':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"client remove_client <client_name>\"):\n",
@@ -739,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 96,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -774,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 97,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -819,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 98,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -838,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 99,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -847,28 +860,17 @@
      "output_type": "stream",
      "text": [
       "Starting city simulation... Type 'q' to exit\n",
-      "School EOI added to the system.\n",
+      "\n",
       "Client Billy added to the system.\n",
-      "--- Agents loaded successfully from agents.json. --- \n",
-      "Error: Invalid command.\n",
-      "Available commands for school:\n",
-      "-school add_school <school_name>: Add a new school to the system.\n",
-      "-school create_course <course_name> <school_name>: Create a new course at school.\n",
-      "-school show_students <school_name>: Show the list of all students registered at school.\n",
-      "-school show_enrollment_queue <school_name>: Show the enrollment queue for the course.\n",
-      "-school admit_student_from_queue <school_name> <course_name>: Admit the next student from the queue to enroll in to a course.\n",
-      "-school show_courses <school_name>: Show the available courses at school.\n",
-      "-school remove_student <school_name> <client_name>: Remove a student from school.\n",
-      "-school show_list: Show the list of schools in the system\n",
-      "-school close / open <schol_name>: Open / close school, if there isn't students at class\n",
-      "-school add_exam_to_course <school_name> <course_name> <exam_name>: Add an exam to a specific course at school.\n",
-      "-school remove_school <school_name>: Removes the school from the agents.\n",
-      "-quit: q: Exit the simulation.\n",
-      "The exam 'Chapter03' has been added to course 'Python'.\n",
-      "--- Agents saved successfully to agents.json. --- \n",
+      "Client 'Billy' added to the system.\n",
+      "\n",
+      "School EOI added to the system.\n",
+      "School 'EOI' added to the system.\n",
+      "Course 'Python' has been created in school 'EOI'.\n",
       "The exam 'Chapter01' has been added to course 'Python'.\n",
-      "The exam 'Chapter02' has been added to course 'Python'.\n",
-      "--- Agents saved successfully to agents.json. --- \n"
+      "Client 'Billy' has been enrolled in school 'EOI'.\n",
+      "Billy joined the enrollment queue for Python in EOI.\n",
+      "The student 'Billy' has been admitted to the course 'Python'.\n"
      ]
     }
    ],
