feat(Client): The take_exam command has been implemented successfully .

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 394,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 395,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -105,41 +105,46 @@
     "                print(agent.describe())     \n",
     "    \n",
     "    def load_agents_from_file(self, file_path):\n",
-    "            \"\"\"Carga agentes desde un fichero JSON (con Exams como array de objetos).\"\"\"\n",
+    "        \"\"\"Carga agentes desde un fichero JSON (con Exams como array de objetos).\"\"\"\n",
     "\n",
-    "            import json\n",
-    "            try:\n",
-    "                with open(file_path, 'r') as file:\n",
-    "                    data = json.load(file)\n",
+    "        import json\n",
+    "        try:\n",
+    "            with open(file_path, 'r') as file:\n",
+    "                data = json.load(file)\n",
     "\n",
-    "                # Load schools\n",
-    "                for school_name, school_data in data.get(\"schools\", {}).items():\n",
-    "                    self.add_agent(School, school_name)\n",
-    "                    school = self.get_agent_by_name(school_name, School)\n",
-    "                    school.students = school_data.get(\"students\", [])\n",
-    "                    for course_name, course_info in school_data.get(\"courses\", {}).items():\n",
-    "                        course = Course(name=course_name)\n",
-    "                        course.students = course_info.get(\"students\", [])\n",
-    "                        # Load exams as objects\n",
-    "                        exams_data = course_info.get(\"exams\", [])\n",
-    "                        course.exams = [Exam(exam_data[\"name\"]) for exam_data in exams_data if \"name\" in exam_data]\n",
-    "                        school.courses.append(course)\n",
+    "            # Load schools\n",
+    "            for school_name, school_data in data.get(\"schools\", {}).items():\n",
+    "                self.add_agent(School, school_name)\n",
+    "                school = self.get_agent_by_name(school_name, School)\n",
+    "                school.students = school_data.get(\"students\", [])\n",
+    "                school.courses = []  # Initialize courses list for the school\n",
+    "                for course_name, course_info in school_data.get(\"courses\", {}).items():\n",
+    "                    course = Course(name=course_name)\n",
+    "                    course.students = course_info.get(\"students\", [])\n",
+    "                    course.exams = [] # Initialize exams list for the course\n",
+    "                    # Load exams as objects\n",
+    "                    exams_data = course_info.get(\"exams\", {})\n",
+    "                    for exam_name, exam_details in exams_data.items():\n",
+    "                        exam = Exam(exam_name)\n",
+    "                        exam.exams_student = exam_details.get(\"exams_student\", {})\n",
+    "                        course.exams.append(exam)\n",
+    "                    school.courses.append(course)\n",
     "\n",
-    "                # Load clients\n",
-    "                for client_name, client_data in data.get(\"clients\", {}).items():\n",
-    "                    self.add_agent(Client, client_name)\n",
-    "                    client = self.get_agent_by_name(client_name, Client)\n",
-    "                    enrolled_school = client_data.get(\"enrolled_school\")\n",
-    "                    if enrolled_school:\n",
-    "                        client.school_stack.push(enrolled_school)\n",
+    "            # Load clients\n",
+    "            for client_name, client_data in data.get(\"clients\", {}).items():\n",
+    "                self.add_agent(Client, client_name)\n",
+    "                client = self.get_agent_by_name(client_name, Client)\n",
+    "                enrolled_school = client_data.get(\"enrolled_school\")\n",
+    "                if enrolled_school:\n",
+    "                    client.school_stack.push(enrolled_school)\n",
     "\n",
-    "                print(f\"--- Agents loaded successfully from {file_path}. --- \")\n",
-    "            except FileNotFoundError:\n",
-    "                print(f\"Error: File '{file_path}' not found.\")\n",
-    "            except json.JSONDecodeError:\n",
-    "                print(f\"Error: File '{file_path}' is not a valid JSON file.\")\n",
-    "            except Exception as e:\n",
-    "                print(f\"An error occurred while loading agents: {e}\")\n",
+    "            print(f\"--- Agents loaded successfully from {file_path}. --- \")\n",
+    "        except FileNotFoundError:\n",
+    "            print(f\"Error: File '{file_path}' not found.\")\n",
+    "        except json.JSONDecodeError:\n",
+    "            print(f\"Error: File '{file_path}' is not a valid JSON file.\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"An error occurred while loading agents: {e}\")\n",
     "    \n",
     "    \n",
     "    def save_agents_to_file(self, file_path):\n",
@@ -154,7 +159,16 @@
     "            for school in self.filter_agents(School).values():\n",
     "                courses_data = {}\n",
     "                for course in school.courses:\n",
-    "                    exams_data = [{\"name\": exam.name} for exam in course.exams]\n",
+    "                    exams_data = {}\n",
+    "                    exams_student = {}\n",
+    "                    \n",
+    "                    for exam in course.exams:  \n",
+    "                        for student, value in exam.exams_student.items():\n",
+    "                            exams_student[student] = value\n",
+    "                        exams_data[exam.name] = {\n",
+    "                            \"name\": exam.name,\n",
+    "                            \"exams_student\": exams_student\n",
+    "                        }\n",
     "                    courses_data[course.name] = {\n",
     "                        \"name\": course.name,\n",
     "                        \"students\": course.students,\n",
@@ -191,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -271,7 +285,24 @@
     "        pass\n",
     "    \n",
     "    def take_exam(self, course_name, exam_name):\n",
-    "        pass\n",
+    "        if not self.school_stack.is_empty():\n",
+    "            school_name = self.school_stack.peek()\n",
+    "            school = self.agent_manager.get_agent_by_name(school_name, School)\n",
+    "            if school:\n",
+    "                for course in school.courses:\n",
+    "                    if course.name == course_name:\n",
+    "                        for exam in course.exams:\n",
+    "                            if exam.name == exam_name:\n",
+    "                                exam.exams_student[self.name] = ''\n",
+    "                                print(f\"The exam '{exam.name}' has been taken by the student '{self.name}'.\")\n",
+    "                                break\n",
+    "                        else:\n",
+    "                            print(f\"The exam '{exam_name}' do not exist in course '{course.name}'.\")\n",
+    "                        break\n",
+    "                else:\n",
+    "                    print(f\"{course_name} is not available in {school_name}.\")\n",
+    "        else:\n",
+    "            print(f\"The student '{self.name}' is not enrolled in any school.\")\n",
     "    \n",
     "    def remove_client(self):\n",
     "        self.agent_manager.remove_agent(self.name)\n",
@@ -296,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 397,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -470,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 398,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -493,14 +524,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 399,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Exam():\n",
     "    def __init__(self, name):\n",
-    "        self.name = name"
+    "        self.name = name\n",
+    "        self.exams_student = {}"
    ]
   },
   {
@@ -515,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 400,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -752,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 401,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -787,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 402,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -832,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 403,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -851,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 404,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -860,17 +892,10 @@
      "output_type": "stream",
      "text": [
       "Starting city simulation... Type 'q' to exit\n",
-      "\n",
-      "Client Billy added to the system.\n",
-      "Client 'Billy' added to the system.\n",
-      "\n",
       "School EOI added to the system.\n",
-      "School 'EOI' added to the system.\n",
-      "Course 'Python' has been created in school 'EOI'.\n",
-      "The exam 'Chapter01' has been added to course 'Python'.\n",
-      "Client 'Billy' has been enrolled in school 'EOI'.\n",
-      "Billy joined the enrollment queue for Python in EOI.\n",
-      "The student 'Billy' has been admitted to the course 'Python'.\n"
+      "Client Billy added to the system.\n",
+      "--- Agents loaded successfully from test/test_agents.json. --- \n",
+      "--- Agents saved successfully to agents.json. --- \n"
      ]
     }
    ],
