--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 5,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -39,16 +39,14 @@
   {
    "cell_type": "markdown",
    "id": "453c0284",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Agent Manager"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 7,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -57,7 +55,6 @@
     "    \"\"\"Clase base para gestionar la creación y eliminación de agentes.\"\"\"\n",
     "    def __init__(self):\n",
     "        self.agents = {}\n",
-    "        self.TIME_THRESHOLD = 10\n",
     "        \n",
     "    def filter_agents(self,*agents_types):\n",
     "        \"\"\"Filtra agentes según los tipos proporcionados.\"\"\"\n",
@@ -196,16 +193,14 @@
   {
    "cell_type": "markdown",
    "id": "9450e892",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -318,16 +313,14 @@
   {
    "cell_type": "markdown",
    "id": "d9b090a9",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## School"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 11,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -352,8 +345,8 @@
     "        \"school close / open <schol_name>\": \"Open / close school, if there isn't students at class\",\n",
     "        \"school add_exam_to_course <school_name> <course_name> <exam_name>\": \"Add an exam to a specific course at school.\",\n",
     "        # \"school grade_exam <school_name> <course_name> <client_name> <exam_name>\": \"Grade an exam that the client has taken in a course.\",\n",
-    "        # \"school remove_exam_from_course <school_name> <course_name> <exam_name>\": \"Remove an exam from a course if no client has submitted it.\",\n",
-    "        # \"school show_exams <school_name> <course_name>\": \"Show the list of exams available for a course at the school.\",\n",
+    "        \"school remove_exam_from_course <school_name> <course_name> <exam_name>\": \"Remove an exam from a course if no client has submitted it.\",\n",
+    "        \"school show_exams <school_name> <course_name>\": \"Show the list of exams available for a course at the school.\",\n",
     "        \"school remove_school <school_name>\": \"Removes the school from the agents.\",\n",
     "        \n",
     "        \"quit\": \"q: Exit the simulation.\"\n",
@@ -467,11 +460,35 @@
     "    def grade_exam(self, school_name, course_name, client_name, exam_name):\n",
     "        pass\n",
     "    \n",
-    "    def remove_exam_from_course(self, school_name, course_name, exam_name):\n",
-    "        pass\n",
+    "    def remove_exam_from_course(self, course_name, exam_name):\n",
+    "        for course in self.courses:\n",
+    "            if course_name == course.name:\n",
+    "                for exam in course.exams:\n",
+    "                    if exam_name == exam.name:\n",
+    "                        if len(exam.exams_student) <= 0:\n",
+    "                            course.exams.remove(exam)\n",
+    "                            print(f\"The exam '{exam_name}' has been removed successfully from '{course.name}'.\")\n",
+    "                        else:\n",
+    "                            print(f\"The exam '{exam.name}' cannot be removed because a student has already taken it.\")\n",
+    "                        break\n",
+    "                else:\n",
+    "                    print(f\"The exam '{exam_name}' do not exist in course '{course.name}'.\")\n",
+    "                break\n",
+    "        else:\n",
+    "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
-    "    def show_exams(self, school_name, course_name):\n",
-    "        pass\n",
+    "    def show_exams(self, course_name):\n",
+    "        for course in self.courses:\n",
+    "            if course_name == course.name:\n",
+    "                if len(course.exams) > 0:\n",
+    "                    print(f\"Exams in {course.name}: \")\n",
+    "                    for exam in course.exams:\n",
+    "                        print(f\"- {exam.name}\")\n",
+    "                else:\n",
+    "                    print(f\"There is no exams in {course.name}.\")\n",
+    "                break\n",
+    "        else:\n",
+    "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
     "    def remove_school(self):\n",
     "        self.agent_manager.remove_agent(self.name)\n",
@@ -503,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 13,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -526,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 15,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
@@ -540,16 +557,14 @@
   {
    "cell_type": "markdown",
    "id": "6b99d400",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## City Simulation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 17,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -700,6 +715,20 @@
     "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
     "                    if school:\n",
     "                        school.add_exam_to_course(course_name, exam_name)\n",
+    "            \n",
+    "            elif parts[1] == 'remove_exam_from_course':\n",
+    "                if self.validate_command(parts, 5, \"invalid_format\", \"school remove_exam_from_course <school_name> <course_name> <exam_name>\"):\n",
+    "                    _, _, school_name, course_name, exam_name = parts\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
+    "                    if school:\n",
+    "                        school.remove_exam_from_course(course_name, exam_name)\n",
+    "            \n",
+    "            elif parts[1] == 'show_exams':\n",
+    "                if self.validate_command(parts, 4, \"invalid_format\", \"school show_exams <school_name> <course_name>\"):\n",
+    "                    _, _, school_name, course_name = parts\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
+    "                    if school:\n",
+    "                        school.show_exams(course_name)\n",
     "        \n",
     "            elif   parts[1] == 'remove_school':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"school remove_school <school_name>\"):\n",
@@ -783,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 19,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -809,16 +838,14 @@
   {
    "cell_type": "markdown",
    "id": "abdddcd9",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Queue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 21,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -863,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 23,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -882,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 25,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -890,11 +917,194 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting city simulation... Type 'q' to exit\n",
+      "Starting city simulation... Type 'q' to exit\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  ?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "            Available help commands:\n",
+      "            - ? school: Show available commands for schools.\n",
+      "            - ? client: Show available commands for clients.\n",
+      "            - load_agents <file_path>: Load agents from a JSON file.\n",
+      "            - save_agents <file_path>: Save agents to a JSON file.\n",
+      "            - q: Exit the simulation.              \n",
+      "            \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  ? school\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available commands for school:\n",
+      "-school add_school <school_name>: Add a new school to the system.\n",
+      "-school create_course <course_name> <school_name>: Create a new course at school.\n",
+      "-school show_students <school_name>: Show the list of all students registered at school.\n",
+      "-school show_enrollment_queue <school_name>: Show the enrollment queue for the course.\n",
+      "-school admit_student_from_queue <school_name> <course_name>: Admit the next student from the queue to enroll in to a course.\n",
+      "-school show_courses <school_name>: Show the available courses at school.\n",
+      "-school remove_student <school_name> <client_name>: Remove a student from school.\n",
+      "-school show_list: Show the list of schools in the system\n",
+      "-school close / open <schol_name>: Open / close school, if there isn't students at class\n",
+      "-school add_exam_to_course <school_name> <course_name> <exam_name>: Add an exam to a specific course at school.\n",
+      "-school remove_exam_from_course <school_name> <course_name> <exam_name>: Remove an exam from a course if no client has submitted it.\n",
+      "-school show_exams <school_name> <course_name>: Show the list of exams available for a course at the school.\n",
+      "-school remove_school <school_name>: Removes the school from the agents.\n",
+      "-quit: q: Exit the simulation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  school add_school\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Invalid command format. Use 'school add_school <school_name>'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  school add_school EOI\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "School EOI added to the system.\n",
-      "Client Billy added to the system.\n",
-      "--- Agents loaded successfully from test/test_agents.json. --- \n",
-      "--- Agents saved successfully to agents.json. --- \n"
+      "School 'EOI' added to the system.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  school create_course EOI Python\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: School 'Python' not found.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  school create_course Python EOI\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Course 'Python' has been created in school 'EOI'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  school show_courses\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Invalid command format. Use 'school show_courses <school_name>'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  school show_courses EOI\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Courses in school 'EOI':\n",
+      "- Python\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  school add_exam_to_course EOI Python Chapter01\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The exam 'Chapter01' has been added to course 'Python'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  school add_exam_to_course EOI Python Chapter02\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The exam 'Chapter02' has been added to course 'Python'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  school show_exams EOI Python\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exams in Python: \n",
+      "- Chapter01\n",
+      "- Chapter02\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">  q\n"
      ]
     }
    ],
@@ -904,6 +1114,14 @@
     "    simulation = CitySimulation()\n",
     "    simulation.command_loop() "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99845d1c-d284-40db-9e83-cb777a8d36f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
